--- a/settings.json
+++ b/settings.json
@@ -6,9 +6,9 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"BotName":"kon Botz",  
-"NomorOwner":"62887443094409",  
-"NomorOwner2":"+62 887-4330-94409",  
+"BotName":"Alam Botz",  
+"NomorOwner":"6285888083107",  
+"NomorOwner2":"+62 858-8808-3107",  
 "NamaOwner":"SashaChan",  
 "Dana":"088743309409", 
 "Pulsa":"0887443094409", 
